feat: Add comprehensive Railway deployment documentation and scripts for SiliHealth
- Created ENV_VARIABLES_RAILWAY.md for environment variable setup.
- Added INDEX.md for complete navigation of deployment documentation.
- Introduced RAILWAY_QUICK_START.md for a quick deployment guide.
- Updated README.md with deployment instructions and architecture overview.
- Modified backend/.env.example for Neon database configuration.
- Added Procfile for backend and frontend to define start commands.
- Created RAILWAY_DEPLOYMENT.md for backend and frontend deployment instructions.
- Implemented deploy.sh scripts for automated backend and frontend deployment.
- Enhanced package.json scripts for Prisma migrations and deployment.
- Configured railway.json files for backend and frontend deployment settings.
- Updated CORS settings in main.ts for dynamic frontend URLs.
- Added health-check.sh for verifying deployment health.
- Created setup-railway.sh for interactive setup of Railway projects and environment variables.
- Implemented API configuration endpoint in frontend for dynamic backend URL.
- Enhanced frontend JavaScript to initialize API base URL from server config.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,9 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/healid?schema=public"
+DATABASE_URL="postgresql://neondb_owner:npg_y0cR7nwJpDEG@ep-steep-queen-adtatjxy-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
 PORT=4000
+
+JWT_SECRET="your_super_secret_key_min_32_chars_here"
+
+NODE_ENV="development"
+
+FRONTEND_URL="http://localhost:3000"
