--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/main.js",
+    "start": "npm run prisma:generate && npm run prisma:migrate:prod && node dist/main.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:migrate:prod": "prisma migrate deploy",
     "deploy": "railway up"
   },
   "dependencies": {
