--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start": "npm run build && npm run prisma:generate && npm run prisma:migrate:prod && node dist/main.js",
-    "postinstall": "npm run build",
+    "start": "node dist/main.js",
+    "postinstall": "npm run build && npm run prisma:generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:migrate:prod": "prisma migrate deploy",
