--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "stripInternal": true
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "test", "dist", "**/*.spec.ts", "**/*.test.ts"]
 }
