--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,10 +9,10 @@
     "target": "es2019",
     "sourceMap": true,
     "outDir": "dist",
-    "baseUrl": "./src",
     "rootDir": "src",
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
